--- a/demo/index.html
+++ b/demo/index.html
@@ -248,6 +248,9 @@ var touch = ev.originalEvent.touches["0"];
   if(elem.className == "drop_zone"){
     $('.drop_zone').css("background-color", "#ffd998");
   }
+  else{
+    $('.drop_zone').css("background-color", "white");
+  }
 
    }
  
